--- a/outliers.html
+++ b/outliers.html
@@ -67,7 +67,7 @@
     <nav class="navbar navbar-expand-md bg-dark">
 <!--        <h1 class="navbar-brand random-color text-success">Switchers.ai</h1>-->
         <a href="/" class="navbar-brand">
-            <img src="images/icons/logo.jpg" alt="Switchers.ai Logo">
+            <img src="images/icons/logo.svg" alt="Switchers.ai Logo">
         </a>
 
         <div class="collapse navbar-collapse" id="switchers-navbar">
