--- a/node_bu/public/outliers.html
+++ b/node_bu/public/outliers.html
@@ -66,7 +66,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md bg-dark">
 <!--        <h1 class="navbar-brand random-color text-success">Switchers.ai</h1>-->
-        <a href="/" class="navbar-brand">
+        <a href="https://switchers.ai" class="navbar-brand">
             <img src="images/icons/logo.svg" alt="Switchers.ai Logo">
         </a>
 
