--- a/net.html
+++ b/net.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
-    <link href="images/icons/dashboard.webp" rel="shortcut icon">
+    <link href="images/icons/favicon.svg" rel="shortcut icon">
 
     <title>Switchers.ai | Dashboard</title>
 
@@ -50,7 +50,7 @@
     <nav class="navbar navbar-expand-md bg-dark">
 <!--        <h1 class="navbar-brand random-color text-success">Switchers.ai</h1>-->
         <a href="https://switchers.ai" class="navbar-brand">
-            <img src="images/icons/logo.svg" alt="Switchers.ai Logo">
+            <img id="site-logo" class="logo" src="images/icons/black_logo.svg" alt="Switchers.ai Logo">
         </a>
 
         <div class="collapse navbar-collapse" id="switchers-navbar">
