--- a/questions.html
+++ b/questions.html
@@ -66,7 +66,7 @@
     <nav class="navbar navbar-expand-md bg-dark">
 <!--        <h1 class="navbar-brand random-color text-success">Switchers.ai</h1>-->
         <a href="https://switchers.ai" class="navbar-brand">
-            <img id="site-logo" class="logo" src="images/icons/logo.svg" alt="Switchers.ai Logo">
+            <div class="logo dark-mode-logo" id="site-logo"></div>
         </a>
 
         <div class="collapse navbar-collapse" id="switchers-navbar">
