--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
-    <link href="images/icons/dashboard.webp" rel="shortcut icon">
+    <link href="images/icons/favicon.svg" rel="shortcut icon">
 
-    <title>Switchers.ai | Main</title>
+    <title>Switchers.ai | App</title>
+
+    <meta property="og:title" content="Switchers.ai | App" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="images/icons/favicon.svg" />
 </head>
 <body>
 <script>
