--- a/outliers.html
+++ b/outliers.html
@@ -6,7 +6,11 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <link href="images/icons/favicon.svg" rel="shortcut icon">
 
-    <title>Switchers.ai | Questions</title>
+    <title>Switchers.ai | Outliers</title>
+
+    <meta property="og:title" content="Switchers.ai | Outliers" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="images/icons/favicon.svg" />
 
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
           rel="stylesheet" type="text/css">
