--- a/settings.html
+++ b/settings.html
@@ -8,6 +8,10 @@
 
     <title>Switchers.ai | Settings</title>
 
+    <meta property="og:title" content="Switchers.ai | Settings" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="images/icons/favicon.svg" />
+
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
           rel="stylesheet" type="text/css">
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
