--- a/node_bu/public/index.html
+++ b/node_bu/public/index.html
@@ -10,7 +10,7 @@
 
     <meta property="og:title" content="Switchers.ai | App" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="images/icons/favicon.svg" />
+    <meta property="og:image" content="https://www.switchers.ai/images/icons/favicon.svg" />
 </head>
 <body>
 <script>
