--- a/node_bu/public/settings.html
+++ b/node_bu/public/settings.html
@@ -10,7 +10,7 @@
 
     <meta property="og:title" content="Switchers.ai | Settings" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://www.switchers.ai/images/icons/favicon.svg" />
+    <meta property="og:image" content="https://app.switchers.ai/images/icons/favicon.svg" />
 
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
           rel="stylesheet" type="text/css">
