--- a/node_bu/public/settings.html
+++ b/node_bu/public/settings.html
@@ -80,9 +80,9 @@
                     <i class="bi bi-pie-chart"></i>
                     Questions
                 </button>
-                <button type="button" class="btn btn-sm text-white m-1" id="outliers-nav-btn" data-toggle="tooltip" data-placement="bottom" title="outliers">
+                <button type="button" class="btn btn-sm text-white m-1" id="impacts-nav-btn" data-toggle="tooltip" data-placement="bottom" title="outliers">
                     <i class="bi bi-clipboard-data"></i>
-                    Outliers
+                    Impacts
                 </button>
             </div>
         </div>
@@ -124,6 +124,18 @@
         <!--Main layout-->
     </div>
     <!-- END OF MAIN VIEW-->
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-dark">
+                    <strong>&copy; 2024 Switchers.ai. All rights reserved.</strong>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- End of Footer -->
 </div>
 
 <script crossorigin="anonymous" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"
