--- a/node_bu/public/net.html
+++ b/node_bu/public/net.html
@@ -1,4 +1,186 @@
 <!DOCTYPE html>
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="utf-8">-->
+<!--    <meta content="width=device-width, initial-scale=1.0" name="viewport">-->
+<!--    <meta content="IE=edge" http-equiv="X-UA-Compatible">-->
+<!--    <link href="images/icons/favicon.svg" rel="shortcut icon">-->
+
+<!--    <title>Switchers.ai | Net</title>-->
+
+<!--    <meta property="og:title" content="Switchers.ai | Net"/>-->
+<!--    <meta property="og:type" content="website"/>-->
+<!--    <meta property="og:image" content="https://app.switchers.ai/images/icons/favicon.svg"/>-->
+
+<!--    <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"-->
+<!--          rel="stylesheet" type="text/css">-->
+<!--    <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"-->
+<!--          rel="stylesheet" type="text/css">-->
+<!--    <link crossorigin="anonymous" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css"-->
+<!--          rel="stylesheet" type="text/css">-->
+<!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">-->
+<!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"-->
+<!--          crossorigin="anonymous">-->
+
+<!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">-->
+<!--    <link rel="stylesheet" href="css/main_view.css">-->
+<!--    <link rel="stylesheet" href="css/net.css">-->
+<!--</head>-->
+<!--<style>-->
+<!--    /* Custom CSS for scrollable table with sticky header */-->
+<!--    .table-container {-->
+<!--        max-height: 75vh; /* Adjust the maximum height as needed */-->
+<!--        overflow-y: auto;-->
+<!--        overflow-x: auto;-->
+<!--    }-->
+
+<!--    thead {-->
+<!--        position: sticky;-->
+<!--        top: 0;-->
+<!--        background-color: #fff; /* Change the background color as needed */-->
+<!--        z-index: 1; /* Ensure the header stays above other elements */-->
+<!--    }-->
+
+<!--    /* Add some colors */-->
+<!--    .table thead {-->
+<!--        background-color: #f2f2f2; /* Header background color */-->
+<!--    }-->
+
+<!--    .table tbody tr:nth-child(even) {-->
+<!--        background-color: #f9f9f9; /* Alternate row background color */-->
+<!--    }-->
+
+<!--    /* Apply hover effects */-->
+<!--    .table tbody tr:hover {-->
+<!--        background-color: #e2e2e2; /* Hover color */-->
+<!--    }-->
+
+<!--    /* Define borders and spacing */-->
+<!--    .table {-->
+<!--        border-collapse: separate;-->
+<!--        border-spacing: 0;-->
+<!--    }-->
+
+<!--    .table th,-->
+<!--    .table td {-->
+<!--        border: 1px solid #dddddd; /* Border for cells */-->
+<!--        padding: 8px; /* Adjust cell padding */-->
+<!--    }-->
+
+<!--    /* Use typography */-->
+<!--    .table th,-->
+<!--    .table td {-->
+<!--        font-size: 14px; /* Adjust font size */-->
+<!--        font-weight: normal; /* Normal font weight */-->
+<!--    }-->
+
+<!--    .navbar-brand img {-->
+<!--        height: 40px; /* or whatever size you prefer */-->
+<!--        width: auto; /* this will keep the image ratio */-->
+<!--        /* additional styles if needed */-->
+<!--    }-->
+<!--</style>-->
+<!--<body class="body-background-dark">-->
+
+<!--<div>-->
+<!--    &lt;!&ndash; NAVBAR &ndash;&gt;-->
+<!--    <nav class="navbar navbar-expand-md bg-dark">-->
+<!--        &lt;!&ndash;        <h1 class="navbar-brand random-color text-success">Switchers.ai</h1>&ndash;&gt;-->
+<!--        <a href="https://switchers.ai" class="navbar-brand">-->
+<!--            <div class="logo dark-mode-logo" id="site-logo"></div>-->
+<!--        </a>-->
+
+<!--        <div class="collapse navbar-collapse" id="switchers-navbar">-->
+<!--            <div class="navbar-nav">-->
+<!--                <button type="button" class="btn btn-sm text-white m-1" id="settings-nav-btn" data-toggle="tooltip"-->
+<!--                        data-placement="bottom" title="settings">-->
+<!--                    <i class="bi bi-gear"></i>-->
+<!--                    Settings-->
+<!--                </button>-->
+<!--                <button type="button" class="btn btn-sm bg-primary text-white m-1" id="net-nav-btn"-->
+<!--                        data-toggle="tooltip" data-placement="bottom" title="net">-->
+<!--                    <i class="bi bi-speedometer2"></i>-->
+<!--                    Net-->
+<!--                </button>-->
+<!--                <button type="button" class="btn btn-sm text-white m-1" id="questions-nav-btn" data-toggle="tooltip"-->
+<!--                        data-placement="bottom" title="questions">-->
+<!--                    <i class="bi bi-pie-chart"></i>-->
+<!--                    Questions-->
+<!--                </button>-->
+<!--                <button type="button" class="btn btn-sm text-white m-1" id="outliers-nav-btn" data-toggle="tooltip"-->
+<!--                        data-placement="bottom" title="outliers">-->
+<!--                    <i class="bi bi-clipboard-data"></i>-->
+<!--                    Outliers-->
+<!--                </button>-->
+<!--            </div>-->
+<!--        </div>-->
+
+<!--        &lt;!&ndash; DARK MODE TOGGLE &ndash;&gt;-->
+<!--        <div class="ml-2 mr-5">-->
+<!--            <div class="form-check form-switch">-->
+<!--                <input class="form-check-input" type="checkbox" role="switch" id="toggle-dark-mode"-->
+<!--                       data-toggle="tooltip" data-placement="bottom" title="dark/light mode">-->
+<!--                <label class="form-check-label text-white" for="toggle-dark-mode">Dark/Light</label>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        &lt;!&ndash; END OF DARK MODE TOGGLE &ndash;&gt;-->
+
+<!--        <a href="#" data-toggle="collapse" data-target="#switchers-navbar" class="ml-auto h3 mb-0 d-md-none">-->
+<!--            <i class="bi bi-list"></i>-->
+<!--        </a>-->
+<!--    </nav>-->
+<!--    &lt;!&ndash; END OF NAVBAR &ndash;&gt;-->
+
+<!--    &lt;!&ndash; MAIN VIEW&ndash;&gt;-->
+<!--    <div class="container-fluid">-->
+<!--        &lt;!&ndash;Main layout&ndash;&gt;-->
+<!--        <main>-->
+<!--            <div class="pt-2">-->
+<!--                <div class="row mt-3 mb-2">-->
+<!--                    <div class="table-container">-->
+<!--                        <table class="table table-bordered">-->
+<!--                            <thead id="table-header"></thead>-->
+<!--                            <tbody id="table-body"></tbody>-->
+<!--                        </table>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </main>-->
+<!--        &lt;!&ndash;Main layout&ndash;&gt;-->
+<!--    </div>-->
+<!--    &lt;!&ndash; END OF MAIN VIEW&ndash;&gt;-->
+
+<!--    &lt;!&ndash; Footer &ndash;&gt;-->
+<!--    <footer class="footer">-->
+<!--        <div class="container">-->
+<!--            <div class="row">-->
+<!--                <div class="col-md-12 text-dark">-->
+<!--                    <strong>&copy; 2024 Switchers.ai. All rights reserved.</strong>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </footer>-->
+<!--    &lt;!&ndash; End of Footer &ndash;&gt;-->
+<!--</div>-->
+
+<!--<script crossorigin="anonymous" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"-->
+<!--        type="text/javascript"></script>-->
+<!--<script crossorigin="anonymous" src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"-->
+<!--        type="text/javascript"></script>-->
+<!--<script crossorigin="anonymous" src="https://cdnjs.cloudflare.com/ajax/libs/notify/0.4.2/notify.min.js"-->
+<!--        type="text/javascript"></script>-->
+<!--<script crossorigin="anonymous" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"-->
+<!--        type="text/javascript"></script>-->
+<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>-->
+
+<!--<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>-->
+<!--<script src="js/template.js" type="text/javascript"></script>-->
+<!--<script src="js/net.js" type="text/javascript"></script>-->
+<!--</body>-->
+<!--</html>-->
+
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -8,9 +190,9 @@
 
     <title>Switchers.ai | Net</title>
 
-    <meta property="og:title" content="Switchers.ai | Net" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://app.switchers.ai/images/icons/favicon.svg" />
+    <meta property="og:title" content="Switchers.ai | Net"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:image" content="https://app.switchers.ai/images/icons/favicon.svg"/>
 
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
           rel="stylesheet" type="text/css">
@@ -24,12 +206,24 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/main_view.css">
-    <link rel="stylesheet" href="css/net.css">
+    <link rel="stylesheet" href="css/questions.css">
 </head>
 <style>
+    .chart-container {
+        width: auto; /* or any other fixed size */
+        height: 71.55vh;
+    }
+
+    .navbar-brand img {
+        height: 40px; /* or whatever size you prefer */
+        width: auto; /* this will keep the image ratio */
+        /* additional styles if needed */
+    }
+
+
     /* Custom CSS for scrollable table with sticky header */
     .table-container {
-        max-height: 80vh; /* Adjust the maximum height as needed */
+        max-height: 75vh; /* Adjust the maximum height as needed */
         overflow-y: auto;
         overflow-x: auto;
     }
@@ -41,10 +235,37 @@
         z-index: 1; /* Ensure the header stays above other elements */
     }
 
-    .navbar-brand img {
-        height: 40px; /* or whatever size you prefer */
-        width: auto; /* this will keep the image ratio */
-        /* additional styles if needed */
+    /* Add some colors */
+    .table thead {
+        background-color: #f2f2f2; /* Header background color */
+    }
+
+    .table tbody tr:nth-child(even) {
+        background-color: #f9f9f9; /* Alternate row background color */
+    }
+
+    /* Apply hover effects */
+    .table tbody tr:hover {
+        background-color: #e2e2e2; /* Hover color */
+    }
+
+    /* Define borders and spacing */
+    .table {
+        border-collapse: separate;
+        border-spacing: 0;
+    }
+
+    .table th,
+    .table td {
+        border: 1px solid #dddddd; /* Border for cells */
+        padding: 8px; /* Adjust cell padding */
+    }
+
+    /* Use typography */
+    .table th,
+    .table td {
+        font-size: 14px; /* Adjust font size */
+        font-weight: normal; /* Normal font weight */
     }
 </style>
 <body class="body-background-dark">
@@ -52,36 +273,43 @@
 <div>
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md bg-dark">
-<!--        <h1 class="navbar-brand random-color text-success">Switchers.ai</h1>-->
+        <!--        <h1 class="navbar-brand random-color text-success">Switchers.ai</h1>-->
         <a href="https://switchers.ai" class="navbar-brand">
             <div class="logo dark-mode-logo" id="site-logo"></div>
         </a>
 
         <div class="collapse navbar-collapse" id="switchers-navbar">
             <div class="navbar-nav">
-                <button type="button" class="btn btn-sm text-white m-1" id="settings-nav-btn" data-toggle="tooltip" data-placement="bottom" title="settings">
+                <button type="button" class="btn btn-sm text-white m-1" id="settings-nav-btn" data-toggle="tooltip"
+                        data-placement="bottom" title="settings">
                     <i class="bi bi-gear"></i>
                     Settings
                 </button>
-                <button type="button" class="btn btn-sm bg-primary text-white m-1" id="net-nav-btn" data-toggle="tooltip" data-placement="bottom" title="net">
+                <button type="button" class="btn btn-sm bg-primary text-white m-1" id="net-nav-btn"
+                        data-toggle="tooltip"
+                        data-placement="bottom" title="net">
                     <i class="bi bi-speedometer2"></i>
                     Net
                 </button>
-                <button type="button" class="btn btn-sm text-white m-1" id="questions-nav-btn" data-toggle="tooltip" data-placement="bottom" title="questions">
+                <button type="button" class="btn btn-sm text-white m-1" id="questions-nav-btn"
+                        data-toggle="tooltip" data-placement="bottom" title="questions">
                     <i class="bi bi-pie-chart"></i>
                     Questions
                 </button>
-                <button type="button" class="btn btn-sm text-white m-1" id="outliers-nav-btn" data-toggle="tooltip" data-placement="bottom" title="outliers">
+                <button type="button" class="btn btn-sm text-white m-1" id="impacts-nav-btn"
+                        data-toggle="tooltip" data-placement="bottom" title="impacts">
                     <i class="bi bi-clipboard-data"></i>
-                    Outliers
+                    Impacts
                 </button>
             </div>
         </div>
 
+
         <!-- DARK MODE TOGGLE -->
         <div class="ml-2 mr-5">
             <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" role="switch" id="toggle-dark-mode" data-toggle="tooltip" data-placement="bottom" title="dark/light mode">
+                <input class="form-check-input" type="checkbox" role="switch" id="toggle-dark-mode"
+                       data-toggle="tooltip" data-placement="bottom" title="dark/light mode">
                 <label class="form-check-label text-white" for="toggle-dark-mode">Dark/Light</label>
             </div>
         </div>
@@ -95,24 +323,46 @@
 
     <!-- MAIN VIEW-->
     <div class="container-fluid">
-            <!--Main layout-->
-            <main>
+        <!--Main layout-->
+        <main>
+            <div class="pt-2">
+                <div class="row mt-3 mb-2">
+                    <div class="col-md-7 mb-2 col-sm-12 mb-1">
+                        <div class="card">
+                            <div class="chart-container" style="position: relative;">
+                                <canvas id="net-chart"></canvas>
+                            </div>
+                        </div>
+                    </div>
 
-                <div class="pt-2">
-                    <div class="row mt-3 mb-2">
-                            <h2>Net Data</h2>
+                    <div class="col-md-5 mb-2 col-sm-12 mb-1">
+                        <div class="scrollable-container">
                             <div class="table-container">
                                 <table class="table table-bordered">
                                     <thead id="table-header"></thead>
                                     <tbody id="table-body"></tbody>
                                 </table>
                             </div>
+                        </div>
                     </div>
                 </div>
-            </main>
-            <!--Main layout-->
+            </div>
+        </main>
+        <!--Main layout-->
     </div>
     <!-- END OF MAIN VIEW-->
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-dark">
+                    <strong>&copy; 2024 Switchers.ai. All rights reserved.</strong>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- End of Footer -->
 </div>
 
 <script crossorigin="anonymous" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"
@@ -126,6 +376,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
 <script src="js/template.js" type="text/javascript"></script>
 <script src="js/net.js" type="text/javascript"></script>
 </body>
