--- a/node_bu/public/icebergs.html
+++ b/node_bu/public/icebergs.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="css/main_view.css">
-    <link rel="stylesheet" href="css/outliers.css">
+    <link rel="stylesheet" href="css/icebergs.css">
 </head>
 
 <body class="body-background-dark">
@@ -96,6 +96,7 @@
                                 <!-- Clickable list items will be appended here dynamically -->
                             </div>
                         </div>
+                        <div id="additional-text-container" class="additional-text-container mt-2"></div>
                     </div>
 
                     <div class="col-md-9 mb-2 col-sm-12 mb-1">
@@ -105,7 +106,7 @@
                                     <div class="col-4">
                                         <h3 class="text-white">Icebergs Data</h3>
                                     </div>
-                                    <div class="col-8 d-flex justify-content-end">
+                                    <div class="col-4 d-flex justify-content-end">
                                         <!-- Use flexbox to space out buttons -->
                                         <button type="button" class="btn btn-secondary sensitivity-level-button"
                                                 data-level="high" value="high">High
@@ -117,12 +118,36 @@
                                                 data-level="low">Low
                                         </button>
                                     </div>
+                                    <div class="col-4 text-right">
+                                        <!-- Chart Type Toggle -->
+                                        <div class="btn-group btn-group-toggle" id="chartTypeToggle" role="group" aria-label="Chart Type Toggle">
+                                            <button type="button" class="btn btn-sm" onclick="toggleChartType('ColumnChart')" title="Column Chart">
+                                                <i class="bi bi-bar-chart-line"></i>
+                                            </button>
+                                            <button type="button" class="btn btn-sm" onclick="toggleChartType('BarChart')" title="Bar Chart">
+                                                <i class="bi bi-bar-chart-steps"></i>
+                                            </button>
+                                        </div>
+
+                                        <!-- Stacked/Grouped Toggle -->
+                                        <div class="btn-group btn-group-toggle ml-2" id="stackedGroupedToggle" role="group" aria-label="Stacked/Grouped Toggle">
+                                            <button type="button" class="btn btn-sm" onclick="toggleStackMode(true)" title="Stacked">
+                                                <i class="bi bi-stack"></i>
+                                            </button>
+                                            <button type="button" class="btn btn-sm" onclick="toggleStackMode(false)" title="Grouped">
+                                                <i class="bi bi-layout-three-columns"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+
                                 </div>
                             </div>
                         </div>
                         <div class="card mt-2">
-                            <div class="chart-container" style="position: relative;">
-                                <canvas id="icebergs-chart"></canvas>
+                            <div id="chart_div" style="width: auto; height: 70vh; display: flex; align-items: center; justify-content: center;">
+                                <div style="text-align: center;">
+                                    <strong id="chart-placeholder" class="text-black">Choose a question to inspect.</strong>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -161,7 +186,11 @@
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
+
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
 <script src="js/template.js" type="text/javascript"></script>
+<script src="js/googleChart.js" type="text/javascript"></script>
 <script src="js/icebergs.js" type="text/javascript"></script>
 </body>
 </html>
