--- a/outliers.html
+++ b/outliers.html
@@ -59,6 +59,12 @@
                     <i class="bi bi-clipboard-data"></i>
                     Impacts
                 </button>
+                <button type="button" class="btn btn-sm text-white m-1" id="icebergs-nav-btn"
+                        data-target="icebergs.html"
+                        data-toggle="tooltip" data-placement="bottom" title="icebergs">
+                    <i class="bi bi-exclamation-triangle text-danger"></i>
+                    Icebergs
+                </button>
             </div>
         </div>
 
@@ -89,30 +95,8 @@
                             <div class="list-group" id="questions-list">
                                 <!-- Clickable list items will be appended here dynamically -->
                             </div>
-                            <!--                            <div class="accordion" id="accordionExample">-->
-                            <!--                                <div class="accordion-item">-->
-                            <!--                                    <h2 class="accordion-header" id="headingOne">-->
-                            <!--                                        <button class="accordion-button" type="button" data-bs-toggle="collapse"-->
-                            <!--                                                data-bs-target="#collapseOne" aria-expanded="true"-->
-                            <!--                                                aria-controls="collapseOne">-->
-                            <!--                                            Accordion Item #1-->
-                            <!--                                        </button>-->
-                            <!--                                    </h2>-->
-                            <!--                                    <div id="collapseOne" class="accordion-collapse collapse show"-->
-                            <!--                                         aria-labelledby="headingOne" data-bs-parent="#accordionExample">-->
-                            <!--                                        <div class="accordion-body">-->
-                            <!--                                            <strong>This is the first item's accordion body.</strong> It is shown by-->
-                            <!--                                            default, until the collapse plugin adds the appropriate classes that we use-->
-                            <!--                                            to style each element. These classes control the overall appearance, as well-->
-                            <!--                                            as the showing and hiding via CSS transitions. You can modify any of this-->
-                            <!--                                            with custom CSS or overriding our default variables. It's also worth noting-->
-                            <!--                                            that just about any HTML can go within the <code>.accordion-body</code>,-->
-                            <!--                                            though the transition does limit overflow.-->
-                            <!--                                        </div>-->
-                            <!--                                    </div>-->
-                            <!--                                </div>-->
-                            <!--                            </div>-->
                         </div>
+                        <div id="additional-text-container" class="additional-text-container mt-2"></div>
                     </div>
 
                     <div class="col-md-9 mb-2 col-sm-12 mb-1">
@@ -122,7 +106,7 @@
                                     <div class="col-4">
                                         <h3 class="text-white">Impacts Data</h3>
                                     </div>
-                                    <div class="col-8 d-flex justify-content-end">
+                                    <div class="col-4 d-flex justify-content-end">
                                         <!-- Use flexbox to space out buttons -->
                                         <button type="button" class="btn btn-secondary sensitivity-level-button"
                                                 data-level="high" value="high">High
@@ -134,12 +118,36 @@
                                                 data-level="low">Low
                                         </button>
                                     </div>
+                                    <div class="col-4 text-right">
+                                        <!-- Chart Type Toggle -->
+                                        <div class="btn-group btn-group-toggle" id="chartTypeToggle" role="group" aria-label="Chart Type Toggle">
+                                            <button type="button" class="btn btn-sm" onclick="toggleChartType('ColumnChart')" title="Column Chart">
+                                                <i class="bi bi-bar-chart-line"></i>
+                                            </button>
+                                            <button type="button" class="btn btn-sm" onclick="toggleChartType('BarChart')" title="Bar Chart">
+                                                <i class="bi bi-bar-chart-steps"></i>
+                                            </button>
+                                        </div>
+
+                                        <!-- Stacked/Grouped Toggle -->
+                                        <div class="btn-group btn-group-toggle ml-2" id="stackedGroupedToggle" role="group" aria-label="Stacked/Grouped Toggle">
+                                            <button type="button" class="btn btn-sm" onclick="toggleStackMode(true)" title="Stacked">
+                                                <i class="bi bi-stack"></i>
+                                            </button>
+                                            <button type="button" class="btn btn-sm" onclick="toggleStackMode(false)" title="Grouped">
+                                                <i class="bi bi-layout-three-columns"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+
                                 </div>
                             </div>
                         </div>
                         <div class="card mt-2">
-                            <div class="chart-container" style="position: relative;">
-                                <canvas id="impacts-chart"></canvas>
+                            <div id="chart_div" style="width: auto; height: 70vh; display: flex; align-items: center; justify-content: center;">
+                                <div style="text-align: center;">
+                                    <strong id="chart-placeholder" class="text-black">Choose a question to inspect.</strong>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -178,7 +186,11 @@
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
+
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
 <script src="js/template.js" type="text/javascript"></script>
+<script src="js/googleChart.js" type="text/javascript"></script>
 <script src="js/outliers.js" type="text/javascript"></script>
 </body>
 </html>
