--- a/node_bu/public/outliers.html
+++ b/node_bu/public/outliers.html
@@ -90,8 +90,8 @@
         <main>
             <div class="pt-2">
                 <div class="row mt-3 mb-2">
-                    <div class="col-md-3 mb-2 col-sm-12 mb-1">
-                        <div class="scrollable-container">
+                    <div id="questions-section" class="col-md-3 mb-2 col-sm-12 mb-1">
+                        <div class="scrollable-container question-transition">
                             <div class="list-group" id="questions-list">
                                 <!-- Clickable list items will be appended here dynamically -->
                             </div>
@@ -99,7 +99,7 @@
                         <div id="additional-text-container" class="additional-text-container mt-2"></div>
                     </div>
 
-                    <div class="col-md-9 mb-2 col-sm-12 mb-1">
+                    <div id="main-graph-data" class="col-md-9 mb-2 col-sm-12 mb-1">
                         <div class="card">
                             <div class="card bg-dark d-flex justify-content-center">
                                 <div class="row p-2 align-items-center">
