--- a/node_bu/public/questions.html
+++ b/node_bu/public/questions.html
@@ -99,22 +99,22 @@
         <main>
             <div class="pt-2">
                 <div class="row mt-3 mb-2">
-                    <div class="col-md-3 mb-2 col-sm-12 mb-1">
-                        <div class="scrollable-container">
+                    <div id="questions-section" class="col-md-3 mb-2 col-sm-12 mb-1">
+                        <div class="scrollable-container question-transition">
                             <div class="list-group" id="questions-list">
                                 <!-- Clickable list items will be appended here dynamically -->
                             </div>
                         </div>
                         <div id="additional-text-container" class="additional-text-container mt-2"></div>
                     </div>
-                    <div class="col-md-9 mb-2 col-sm-12 mb-1">
+                    <div id="main-graph-data" class="col-md-9 mb-2 col-sm-12 mb-1">
                         <div class="card">
                             <div class="card bg-dark d-flex justify-content-center">
                                 <div class="row p-2 align-items-center">
-                                    <div class="col-4">
+                                    <div class="col-6">
                                         <h3 class="text-white">Questions Data</h3>
                                     </div>
-                                    <div class="col-4">
+                                    <div class="col-2">
                                     </div>
                                     <div class="col-4 text-right">
                                         <!-- Chart Type Toggle -->
