--- a/node_bu/public/outliers.html
+++ b/node_bu/public/outliers.html
@@ -103,10 +103,10 @@
                         <div class="card">
                             <div class="card bg-dark d-flex justify-content-center">
                                 <div class="row p-2 align-items-center">
-                                    <div class="col-4">
+                                    <div class="col-md-4 col-sm-4 col-xs-4">
                                         <h3 class="text-white">Impacts Data</h3>
                                     </div>
-                                    <div class="col-4 d-flex justify-content-end">
+                                    <div class="col-md-4 col-sm-4 col-xs-4 d-flex justify-content-end">
                                         <!-- Use flexbox to space out buttons -->
                                         <button type="button" class="btn btn-secondary sensitivity-level-button"
                                                 data-level="high" value="high">High
@@ -118,7 +118,7 @@
                                                 data-level="low">Low
                                         </button>
                                     </div>
-                                    <div class="col-4 text-right">
+                                    <div class="col-md-4 col-sm-4 col-xs-4 text-right">
                                         <!-- Chart Type Toggle -->
                                         <div class="btn-group btn-group-toggle" id="chartTypeToggle" role="group" aria-label="Chart Type Toggle">
                                             <button type="button" class="btn btn-sm" onclick="toggleChartType('ColumnChart')" title="Column Chart">
@@ -139,12 +139,11 @@
                                             </button>
                                         </div>
                                     </div>
-
                                 </div>
                             </div>
                         </div>
                         <div class="card mt-2">
-                            <div id="chart_div" style="width: auto; height: 70vh; display: flex; align-items: center; justify-content: center;">
+                            <div id="chart-div" style="width: auto; height: 70vh; display: flex; align-items: center; justify-content: center;">
                                 <div style="text-align: center;">
                                     <strong id="chart-placeholder" class="text-black">Choose a question to inspect.</strong>
                                 </div>
@@ -159,13 +158,11 @@
     <!-- END OF MAIN VIEW-->
 
     <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 text-dark">
-                    <strong>&copy; 2024 Switchers.ai. All rights reserved.</strong>
-                </div>
-            </div>
+    <footer class="footer bg-dark text-white fixed-bottom">
+        <div class="container text-center py-2">
+            <strong>POV: <span id="pov-value"></span></strong>
+            <br>
+            <strong>&copy; 2024 Switchers.ai. All rights reserved.</strong>
         </div>
     </footer>
     <!-- End of Footer -->
