--- a/node_bu/public/settings.html
+++ b/node_bu/public/settings.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="css/main_view.css">
     <!--    <link rel="stylesheet" href="css/settings.css">-->
 </head>
-<body class="body-background-dark">
+<body class="body-background-dark d-flex flex-column min-vh-100">
 <style>
     .navbar-brand img {
         height: 40px;
@@ -187,13 +187,11 @@
     <!-- END OF MAIN VIEW-->
 
     <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 text-dark">
-                    <strong>&copy; 2024 Switchers.ai. All rights reserved.</strong>
-                </div>
-            </div>
+    <footer class="footer bg-dark text-white fixed-bottom">
+        <div class="container text-center py-2">
+            <strong>POV: <span id="pov-value"></span></strong>
+            <br>
+            <strong>&copy; 2024 Switchers.ai. All rights reserved.</strong>
         </div>
     </footer>
     <!-- End of Footer -->
