--- a/node_bu/public/icebergs.html
+++ b/node_bu/public/icebergs.html
@@ -6,9 +6,9 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <link href="images/icons/favicon.svg" rel="shortcut icon">
 
-    <title>Switchers.ai | Icebergs</title>
+    <title>Switchers.ai | Hazardous</title>
 
-    <meta property="og:title" content="Switchers.ai | Icebergs"/>
+    <meta property="og:title" content="Switchers.ai | Hazardous"/>
     <meta property="og:type" content="website"/>
     <meta property="og:image" content="https://app.switchers.ai/images/icons/favicon.svg"/>
 
@@ -36,34 +36,34 @@
                 <button type="button" class="btn btn-sm text-white m-1" id="settings-nav-btn"
                         data-target="settings.html"
                         data-toggle="tooltip"
-                        data-placement="bottom" title="settings">
+                        data-placement="bottom" title="Settings">
                     <i class="bi bi-gear"></i>
                     Settings
                 </button>
                 <button type="button" class="btn btn-sm text-white m-1" id="net-nav-btn"
                         data-target="net.html"
                         data-toggle="tooltip"
-                        data-placement="bottom" title="net">
+                        data-placement="bottom" title="Net">
                     <i class="bi bi-speedometer2"></i>
                     Net
                 </button>
                 <button type="button" class="btn btn-sm text-white m-1" id="questions-nav-btn"
                         data-target="questions.html"
-                        data-toggle="tooltip" data-placement="bottom" title="questions">
+                        data-toggle="tooltip" data-placement="bottom" title="Questions">
                     <i class="bi bi-pie-chart"></i>
                     Questions
                 </button>
                 <button type="button" class="btn btn-sm text-white m-1" id="impacts-nav-btn"
                         data-target="outliers.html"
-                        data-toggle="tooltip" data-placement="bottom" title="impacts">
-                    <i class="bi bi-clipboard-data"></i>
+                        data-toggle="tooltip" data-placement="bottom" title="Impacts">
+                    <i class="bi bi-clipboard-data text-success"></i>
                     Impacts
                 </button>
                 <button type="button" class="btn btn-sm bg-primary text-white m-1" id="icebergs-nav-btn"
                         data-target="icebergs.html"
-                        data-toggle="tooltip" data-placement="bottom" title="icebergs">
+                        data-toggle="tooltip" data-placement="bottom" title="Hazardous">
                     <i class="bi bi-exclamation-triangle text-danger"></i>
-                    Icebergs
+                    Hazardous
                 </button>
             </div>
         </div>
@@ -104,7 +104,7 @@
                             <div class="card bg-dark d-flex justify-content-center">
                                 <div class="row p-2 align-items-center">
                                     <div class="col-md-4 col-sm-4 col-xs-4">
-                                        <h3 class="text-white">Icebergs Data</h3>
+                                        <h3 class="text-white">Hazardous Data</h3>
                                     </div>
                                     <div class="col-md-4 col-sm-4 col-xs-4 d-flex justify-content-end">
                                         <!-- Use flexbox to space out buttons -->
@@ -130,14 +130,14 @@
                                         </div>
 
                                         <!-- Stacked/Grouped Toggle -->
-                                        <div class="btn-group btn-group-toggle ml-2" id="stackedGroupedToggle" role="group" aria-label="Stacked/Grouped Toggle">
-                                            <button type="button" class="btn btn-sm" onclick="toggleStackMode(true)" title="Stacked">
-                                                <i class="bi bi-stack"></i>
-                                            </button>
-                                            <button type="button" class="btn btn-sm" onclick="toggleStackMode(false)" title="Grouped">
-                                                <i class="bi bi-layout-three-columns"></i>
-                                            </button>
-                                        </div>
+<!--                                        <div class="btn-group btn-group-toggle ml-2" id="stackedGroupedToggle" role="group" aria-label="Stacked/Grouped Toggle">-->
+<!--                                            <button type="button" class="btn btn-sm" onclick="toggleStackMode(true)" title="Stacked">-->
+<!--                                                <i class="bi bi-stack"></i>-->
+<!--                                            </button>-->
+<!--                                            <button type="button" class="btn btn-sm" onclick="toggleStackMode(false)" title="Grouped">-->
+<!--                                                <i class="bi bi-layout-three-columns"></i>-->
+<!--                                            </button>-->
+<!--                                        </div>-->
                                     </div>
                                 </div>
                             </div>
